iphone 7 project title and description overlap fix

--- a/css/main.css
+++ b/css/main.css
@@ -450,7 +450,46 @@ li {
     }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+@media only screen and (min-device-width: 150px) and (max-device-width: 360px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+    .main--menu--desktop {
+        display: none;
+    }
+
+    .project--heading {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    .heading-hero {
+        font-size: 3.5em;
+        margin: 0;
+        animation: head 1s ease forwards;
+    }
+
+    .heading-2 {
+        font-size: 2em;
+    }
+
+    .heading-3 {
+        font-size: 1.5em;
+    }
+
+    .btn svg {
+        height: 20px;
+        width: 20px;
+    }
+
+    .social--link svg,
+    .social--link a {
+        width: 20px;
+        height: 20px;
+        stroke: var(--secondary);
+        fill: var(--secondary);
+    }
+}
+
+@media only screen and (min-device-width: 0) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
     .main {
         grid-template-rows: 15% 75% 10%;
         grid-template-columns: 100%;
@@ -462,8 +501,7 @@ li {
 
     .main--content {
         padding: 20px;
-        justify-content: flex-start;
-        border-top: 3px solid var(--secondary);
+        display: block;
     }
 
     .main--menu {
@@ -511,6 +549,7 @@ li {
         justify-content: space-between;
         padding: 10px;
         z-index: 100;
+        border-bottom: 3px solid var(--secondary);
     }
 
     .main--content {
@@ -642,45 +681,6 @@ li {
 
     .description {
         font-size: 2em;
-    }
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 360px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-    .main--menu--desktop {
-        display: none;
-    }
-
-    .project--heading {
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
-
-    .heading-hero {
-        font-size: 3.5em;
-        margin: 0;
-        animation: head 1s ease forwards;
-    }
-
-    .heading-2 {
-        font-size: 2em;
-    }
-
-    .heading-3 {
-        font-size: 1.5em;
-    }
-
-    .btn svg {
-        height: 20px;
-        width: 20px;
-    }
-
-    .social--link svg,
-    .social--link a {
-        width: 20px;
-        height: 20px;
-        stroke: var(--secondary);
-        fill: var(--secondary);
     }
 }
 
